tdf#112574 sw: don't insert RES_ANCHOR into style item sets

Styles don't have anchors, only frames have anchors.

When using "New Style from Selection", clear the RES_ANCHOR from
the style item set.

Also, don't insert it in SwFramePage::DeactivatePage().

This was always broken and reportedly crashes since commit
e07feb9457f2ffb373ae69b73dda290140e4005f

Change-Id: I9320dbbcae980dfa0b00459b8cd808553d1a04f4
(cherry picked from commit 17fe1e19e01f8b23bcd23cc7c1789e8f7064d06e)
Reviewed-on: https://gerrit.libreoffice.org/42819
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>